# universal-ear

./: ..gitignore.swp  .eslintrc.js  .gitignore  README.md  modes_config.json  package-lock.json  package.json  setup.py  start.sh  tst.py
arduino/: app-new.ino
arduino/UV-light-control/: UV-light-control.ino
arduino/app/: app.ino
arduino/app-new/: app-new.ino
arduino/app-new-bytes/: app-new-bytes.ino
arduino/app-new-three-sensors/: app-new-three-sensors.ino
deploy/pi-settings/: wpa_supplicant.conf
firmware/: BUILD.md  PROTOCOL.md  test_client.py
firmware/kat_controller/: CMakeLists.txt  fire.h  iir_filter.h  kat_controller.sublime-project  kat_controller.sublime-workspace  kat_controller_board.h  main.cc  ws2812parallel16b.pio
firmware/pio_repro/: CMakeLists.txt  main.cc  ws2812parallel16b.pio
non_used_code/: HardwareMeasurementsProvider.js  Led.js  MeasurementsCollector.js  Objects.js  webserver.js
non_used_code/to_delete/: tmp.js
pi-brain/: devices.js  package-lock.json  sensorInterface.js  server.js
pi-settings/: wpa_supplicant.conf
pi-settings/.ssh/: id_rsa
sound/: README.md  requirements.txt  run_sound.py  sound_test.py
sound/basic_with_rainbow/: 5ch.txt
sound/flicker/: 5ch.txt
sound/jasmine/: 5ch.txt
sound/ocean/: !.txt  5ch.txt
sound/oceanletov/: 5ch.txt
static/: index.html  main.css
test/: colorHelpers.spec.js  configHelpers.spec.js  dataHelpers.spec.js  usbHelpers.spec.js
to_delete/: tmp.js
web/: client.js  config.js  index.html  main.css  package-lock.json  package.json  server.js  start_server.js  webserver.js
(+118 files in other folders)
